--- a/FacebookAlbums/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FacebookAlbums/en.lproj/MainStoryboard_iPhone.storyboard
@@ -7,7 +7,7 @@
         <!--Login View Controller-->
         <scene sceneID="5">
             <objects>
-                <viewController restorationIdentifier="test2" storyboardIdentifier="test1" id="2" customClass="FALoginViewController" sceneMemberID="viewController">
+                <viewController restorationIdentifier="" storyboardIdentifier="loginViewController" id="2" customClass="FALoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -41,7 +41,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="108" y="63"/>
+            <point key="canvasLocation" x="1096" y="753"/>
         </scene>
         <!--Albums Table View Controller-->
         <scene sceneID="ISC-cb-Gei">
@@ -121,7 +121,7 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c8U-l2-9iL">
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ckJ-0v-qpR"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="ckJ-0v-qpR"/>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="ckJ-0v-qpR" firstAttribute="centerY" secondItem="c8U-l2-9iL" secondAttribute="centerY" type="default" id="SnV-n7-qhA"/>
@@ -197,7 +197,11 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="EyV-Pd-GDl">
-                        <barButtonItem key="rightBarButtonItem" title="Like" id="xhL-bM-bAY"/>
+                        <barButtonItem key="rightBarButtonItem" title="Like" id="xhL-bM-bAY">
+                            <connections>
+                                <action selector="likeAlubm:" destination="4TD-di-cd6" id="aiz-Mt-FI6"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sls-DA-QV6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -234,6 +238,9 @@
         </class>
         <class className="FAAlbumPhotosCollectionViewController" superclassName="UICollectionViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FAAlbumPhotosCollectionViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="likeAlubm:"/>
+            </relationships>
         </class>
         <class className="FAAlbumsTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FAAlbumsTableViewController.h"/>
@@ -257,6 +264,7 @@
         <class className="FAPhotoViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FAPhotoViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
             </relationships>
         </class>
